Wrapup responsive fixes for xs.

--- a/src/scss/components/_subject-guide.scss
+++ b/src/scss/components/_subject-guide.scss
@@ -6,6 +6,13 @@
   width: 100%;
   padding-right: 15px;
 
+  @include respond(xs) {
+    background-color: rgba($smokeyx, 0.47);
+    padding: $golden-ratio-2 !important;
+    margin-left: -18px;
+    width: calc(100% + 36px);
+  }
+
   &--header {
     display: flex;
     flex-wrap: nowrap;
@@ -21,6 +28,13 @@
       text-shadow: $box-shadow;
       text-transform: none !important;
       margin: 0;
+
+      @include respond(xs) {
+        margin-bottom: 0;
+        font-size: $type-3;
+        font-weight: 400;
+        white-space: normal;
+      }
     }
 
     .utk-research-guide--browse {
@@ -84,6 +98,10 @@
   &--assets {
     margin-top: $golden-ratio-2;
 
+    @include respond(xs) {
+      margin-top: 0;
+    }
+
     .utk-subject-guide--asset {
 
       &--header {
@@ -92,12 +110,23 @@
         align-items: center;
         margin-bottom: $golden-ratio-1;
 
+        @include respond(xs) {
+          flex-direction: column;
+          justify-content: flex-start;
+          align-items: flex-start;
+        }
+
         h5 {
           font-size: $type-1;
           font-weight: 700;
           text-transform: uppercase;
           color: white;
           margin: 0;
+
+          @include respond(xs) {
+            font-size: $type-0;
+            align-items: flex-start;
+          }
         }
 
         > a,
@@ -109,6 +138,10 @@
           position: relative;
           color: $eureka;
           margin-top: -4px;
+
+          @include respond(xs) {
+            font-size: $type-0;
+          }
         }
 
         > a:hover,
@@ -129,7 +162,6 @@
       margin-bottom: $golden-ratio-2;
       display: flex;
       flex-direction: column;
-      flex-wrap: wrap;
 
 
       li {
@@ -160,11 +192,23 @@
   &--databases,
   &--guides {
     ul {
+      margin: 0;
+      padding: 0;
+
       li {
         margin-bottom: $golden-ratio-1;
         padding: $golden-ratio-1 $golden-ratio-2;
         border-radius: $golden-ratio-1;
         border: 2px solid rgba($white, 0.11);
+
+        @include respond(xs) {
+          border-left: none;
+          border-right: none;
+          border-bottom: none;
+          border-radius: 0;
+          margin-left: -18px;
+          width: calc(100% + 36px);
+        }
 
         &:last-child {
           margin-bottom: 0;
@@ -201,6 +245,12 @@
             color: $white;
             transition: $transition-all-fast;
             margin-top: 0 !important;
+
+            @include respond(xs) {
+              display: block;
+              line-height: 1.47em;
+              white-space: normal;
+            }
           }
         }
 
@@ -223,6 +273,10 @@
 
   &--guides {
     ul {
+      @include respond(xs) {
+        padding: 0 $golden-ratio-2;
+      }
+
       li {
         border: none;
         padding: 0;
